Fixes compiler warnings.